mini-object-extend/mini-object-extend/mini.y.output
Grammar

    0 $accept: program $end

    1 program: function_declaration_list

    2 function_declaration_list: function_declaration
    3                          | function_declaration_list function_declaration

    4 function_declaration: function
    5                     | declaration

    6 type_spec: INT
    7          | CHAR
    8          | STRUCT IDENTIFIER '{' field_decl_list '}'
    9          | STRUCT '{' field_decl_list '}'
   10          | STRUCT IDENTIFIER
   11          | TYPEID

   12 field_decl_list: field_decl
   13                | field_decl_list field_decl

   14 field_decl: type_spec field_var_list ';'

   15 field_var_list: field_var_unit
   16               | field_var_list ',' field_var_unit

   17 field_var_unit: IDENTIFIER
   18               | '*' IDENTIFIER
   19               | IDENTIFIER dims

   20 declaration: type_spec variable_list ';'
   21            | TYPEDEF type_spec IDENTIFIER ';'
   22            | TYPEDEF type_spec '*' IDENTIFIER ';'
   23            | TYPEDEF type_spec IDENTIFIER '[' INTEGER ']' ';'
   24            | type_spec ';'

   25 variable_list: var_unit
   26              | variable_list ',' var_unit

   27 var_unit: IDENTIFIER
   28         | '*' IDENTIFIER
   29         | IDENTIFIER dims

   30 dims: '[' INTEGER ']' dims
   31     | '[' INTEGER ']'

   32 function: type_spec function_head '(' parameter_list ')' block
   33         | error

   34 function_head: IDENTIFIER

   35 parameter_list: ε
   36               | param_seq

   37 param_seq: type_spec IDENTIFIER
   38          | type_spec '*' IDENTIFIER
   39          | type_spec IDENTIFIER '[' ']'
   40          | param_seq ',' type_spec IDENTIFIER
   41          | param_seq ',' type_spec '*' IDENTIFIER
   42          | param_seq ',' type_spec IDENTIFIER '[' ']'

   43 statement: assignment_statement ';'
   44          | input_statement ';'
   45          | output_statement ';'
   46          | call_statement ';'
   47          | return_statement ';'
   48          | if_statement
   49          | while_statement
   50          | do_while_statement
   51          | for_statement
   52          | switch_statement
   53          | block
   54          | BREAK ';'
   55          | CONTINUE ';'
   56          | error

   57 switch_statement: SWITCH '(' expression ')' '{' setup case_list '}'

   58 setup: ε

   59 case_list: ε
   60          | case_list case_item

   61 case_item: CASE INTEGER ':' statement_list
   62          | CASE INTEGER ':'
   63          | CASE CHARACTER ':' statement_list
   64          | CASE CHARACTER ':'
   65          | DEFAULT ':' statement_list
   66          | DEFAULT ':'

   67 block: '{' declaration_list statement_list '}'

   68 declaration_list: ε
   69                 | declaration_list declaration

   70 statement_list: statement
   71               | statement_list statement

   72 assignment_statement: IDENTIFIER '=' expression
   73                     | '*' expression '=' expression
   74                     | expression '[' expression ']' '=' expression
   75                     | expression '.' IDENTIFIER '=' expression
   76                     | expression ARROW IDENTIFIER '=' expression

   77 expression: expression '+' expression
   78           | expression '-' expression
   79           | expression '*' expression
   80           | expression '/' expression
   81           | '-' expression
   82           | '*' expression
   83           | '&' laddr
   84           | expression '[' expression ']'
   85           | expression '.' IDENTIFIER
   86           | expression ARROW IDENTIFIER
   87           | expression EQ expression
   88           | expression NE expression
   89           | expression LT expression
   90           | expression LE expression
   91           | expression GT expression
   92           | expression GE expression
   93           | expression AND expression
   94           | expression OR expression
   95           | '(' expression ')'
   96           | INTEGER
   97           | CHARACTER
   98           | IDENTIFIER
   99           | call_expression

  100 laddr: IDENTIFIER
  101      | laddr '[' expression ']'
  102      | laddr '.' IDENTIFIER
  103      | laddr ARROW IDENTIFIER

  104 argument_list: ε
  105              | expression_list

  106 expression_list: expression
  107                | expression_list ',' expression

  108 input_statement: INPUT IDENTIFIER

  109 output_statement: OUTPUT IDENTIFIER
  110                 | OUTPUT TEXT
  111                 | OUTPUT CHARACTER

  112 return_statement: RETURN expression

  113 if_statement: IF '(' expression ')' block
  114             | IF '(' expression ')' block ELSE block

  115 while_statement: WHILE '(' expression ')' block

  116 do_while_statement: DO block WHILE '(' expression ')' ';'

  117 for_statement: FOR '(' for_init ';' for_cond ';' for_iter ')' block

  118 for_init: assignment_statement
  119         | call_statement
  120         | ε

  121 for_cond: expression
  122         | ε

  123 for_iter: assignment_statement
  124         | call_statement
  125         | ε

  126 call_statement: IDENTIFIER '(' argument_list ')'

  127 call_expression: IDENTIFIER '(' argument_list ')'


Terminals, with rules where they appear

    $end (0) 0
    '&' (38) 83
    '(' (40) 32 57 95 113 114 115 116 117 126 127
    ')' (41) 32 57 95 113 114 115 116 117 126 127
    '*' (42) 18 22 28 38 41 73 79 82
    '+' (43) 77
    ',' (44) 16 26 40 41 42 107
    '-' (45) 78 81
    '.' (46) 75 85 102
    '/' (47) 80
    ':' (58) 61 62 63 64 65 66
    ';' (59) 14 20 21 22 23 24 43 44 45 46 47 54 55 116 117
    '=' (61) 72 73 74 75 76
    '[' (91) 23 30 31 39 42 74 84 101
    ']' (93) 23 30 31 39 42 74 84 101
    '{' (123) 8 9 57 67
    '}' (125) 8 9 57 67
    error (256) 33 56
    INT (258) 6
    EQ (259) 87
    NE (260) 88
    LT (261) 89
    LE (262) 90
    GT (263) 91
    GE (264) 92
    UMINUS (265)
    IF (266) 113 114
    ELSE (267) 114
    WHILE (268) 115 116
    INPUT (269) 108
    OUTPUT (270) 109 110 111
    RETURN (271) 112
    INTEGER <string> (272) 23 30 31 61 62 96
    IDENTIFIER <string> (273) 8 10 17 18 19 21 22 23 27 28 29 34 37 38 39 40 41 42 72 75 76 85 86 98 100 102 103 108 109 126 127
    TEXT <string> (274) 110
    SWITCH (275) 57
    CASE (276) 61 62 63 64
    DEFAULT (277) 65 66
    BREAK (278) 54
    FOR (279) 117
    DO (280) 116
    CONTINUE (281) 55
    AND (282) 93
    OR (283) 94
    CHAR (284) 7
    CHARACTER <character> (285) 63 64 97 111
    STRUCT (286) 8 9 10
    TYPEDEF (287) 21 22 23
    ARROW (288) 76 86 103
    TYPEID <string> (289) 11
    LOWER_THAN_POSTFIX (290)
    LOWER_THAN_ELSE (291)


Nonterminals, with rules where they appear

    $accept (53)
        on left: 0
    program <tac> (54)
        on left: 1
        on right: 0
    function_declaration_list <tac> (55)
        on left: 2 3
        on right: 1 3
    function_declaration <tac> (56)
        on left: 4 5
        on right: 2 3
    type_spec (57)
        on left: 6 7 8 9 10 11
        on right: 14 20 21 22 23 24 32 37 38 39 40 41 42
    field_decl_list <field> (58)
        on left: 12 13
        on right: 8 9 13
    field_decl <field> (59)
        on left: 14
        on right: 12 13
    field_var_list <field> (60)
        on left: 15 16
        on right: 14 16
    field_var_unit <field> (61)
        on left: 17 18 19
        on right: 15 16
    declaration <tac> (62)
        on left: 20 21 22 23 24
        on right: 5 69
    variable_list <tac> (63)
        on left: 25 26
        on right: 20 26
    var_unit <tac> (64)
        on left: 27 28 29
        on right: 25 26
    dims <dims> (65)
        on left: 30 31
        on right: 19 29 30
    function <tac> (66)
        on left: 32 33
        on right: 4
    function_head <sym> (67)
        on left: 34
        on right: 32
    parameter_list <tac> (68)
        on left: 35 36
        on right: 32
    param_seq <tac> (69)
        on left: 37 38 39 40 41 42
        on right: 36 40 41 42
    statement <tac> (70)
        on left: 43 44 45 46 47 48 49 50 51 52 53 54 55 56
        on right: 70 71
    switch_statement <tac> (71)
        on left: 57
        on right: 52
    setup <tac> (72)
        on left: 58
        on right: 57
    case_list <tac> (73)
        on left: 59 60
        on right: 57 60
    case_item <tac> (74)
        on left: 61 62 63 64 65 66
        on right: 60
    block <tac> (75)
        on left: 67
        on right: 32 53 113 114 115 116 117
    declaration_list <tac> (76)
        on left: 68 69
        on right: 67 69
    statement_list <tac> (77)
        on left: 70 71
        on right: 61 63 65 67 71
    assignment_statement <tac> (78)
        on left: 72 73 74 75 76
        on right: 43 118 123
    expression <exp> (79)
        on left: 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99
        on right: 57 72 73 74 75 76 77 78 79 80 81 82 84 85 86 87 88 89 90 91 92 93 94 95 101 106 107 112 113 114 115 116 121
    laddr <exp> (80)
        on left: 100 101 102 103
        on right: 83 101 102 103
    argument_list <exp> (81)
        on left: 104 105
        on right: 126 127
    expression_list <exp> (82)
        on left: 106 107
        on right: 105 107
    input_statement <tac> (83)
        on left: 108
        on right: 44
    output_statement <tac> (84)
        on left: 109 110 111
        on right: 45
    return_statement <tac> (85)
        on left: 112
        on right: 47
    if_statement <tac> (86)
        on left: 113 114
        on right: 48
    while_statement <tac> (87)
        on left: 115
        on right: 49
    do_while_statement <tac> (88)
        on left: 116
        on right: 50
    for_statement <tac> (89)
        on left: 117
        on right: 51
    for_init <tac> (90)
        on left: 118 119 120
        on right: 117
    for_cond <exp> (91)
        on left: 121 122
        on right: 117
    for_iter <tac> (92)
        on left: 123 124 125
        on right: 117
    call_statement <tac> (93)
        on left: 126
        on right: 46 119 124
    call_expression <exp> (94)
        on left: 127
        on right: 99


State 0

    0 $accept: • program $end

    error    shift, and go to state 1
    INT      shift, and go to state 2
    CHAR     shift, and go to state 3
    STRUCT   shift, and go to state 4
    TYPEDEF  shift, and go to state 5
    TYPEID   shift, and go to state 6

    program                    go to state 7
    function_declaration_list  go to state 8
    function_declaration       go to state 9
    type_spec                  go to state 10
    declaration                go to state 11
    function                   go to state 12


State 1

   33 function: error •

    $default  reduce using rule 33 (function)


State 2

    6 type_spec: INT •

    $default  reduce using rule 6 (type_spec)


State 3

    7 type_spec: CHAR •

    $default  reduce using rule 7 (type_spec)


State 4

    8 type_spec: STRUCT • IDENTIFIER '{' field_decl_list '}'
    9          | STRUCT • '{' field_decl_list '}'
   10          | STRUCT • IDENTIFIER

    IDENTIFIER  shift, and go to state 13
    '{'         shift, and go to state 14


State 5

   21 declaration: TYPEDEF • type_spec IDENTIFIER ';'
   22            | TYPEDEF • type_spec '*' IDENTIFIER ';'
   23            | TYPEDEF • type_spec IDENTIFIER '[' INTEGER ']' ';'

    INT     shift, and go to state 2
    CHAR    shift, and go to state 3
    STRUCT  shift, and go to state 4
    TYPEID  shift, and go to state 6

    type_spec  go to state 15


State 6

   11 type_spec: TYPEID •

    $default  reduce using rule 11 (type_spec)


State 7

    0 $accept: program • $end

    $end  shift, and go to state 16


State 8

    1 program: function_declaration_list •
    3 function_declaration_list: function_declaration_list • function_declaration

    error    shift, and go to state 1
    INT      shift, and go to state 2
    CHAR     shift, and go to state 3
    STRUCT   shift, and go to state 4
    TYPEDEF  shift, and go to state 5
    TYPEID   shift, and go to state 6

    $end  reduce using rule 1 (program)

    function_declaration  go to state 17
    type_spec             go to state 10
    declaration           go to state 11
    function              go to state 12


State 9

    2 function_declaration_list: function_declaration •

    $default  reduce using rule 2 (function_declaration_list)


State 10

   20 declaration: type_spec • variable_list ';'
   24            | type_spec • ';'
   32 function: type_spec • function_head '(' parameter_list ')' block

    IDENTIFIER  shift, and go to state 18
    '*'         shift, and go to state 19
    ';'         shift, and go to state 20

    variable_list  go to state 21
    var_unit       go to state 22
    function_head  go to state 23


State 11

    5 function_declaration: declaration •

    $default  reduce using rule 5 (function_declaration)


State 12

    4 function_declaration: function •

    $default  reduce using rule 4 (function_declaration)


State 13

    8 type_spec: STRUCT IDENTIFIER • '{' field_decl_list '}'
   10          | STRUCT IDENTIFIER •

    '{'  shift, and go to state 24

    $default  reduce using rule 10 (type_spec)


State 14

    9 type_spec: STRUCT '{' • field_decl_list '}'

    INT     shift, and go to state 2
    CHAR    shift, and go to state 3
    STRUCT  shift, and go to state 4
    TYPEID  shift, and go to state 6

    type_spec        go to state 25
    field_decl_list  go to state 26
    field_decl       go to state 27


State 15

   21 declaration: TYPEDEF type_spec • IDENTIFIER ';'
   22            | TYPEDEF type_spec • '*' IDENTIFIER ';'
   23            | TYPEDEF type_spec • IDENTIFIER '[' INTEGER ']' ';'

    IDENTIFIER  shift, and go to state 28
    '*'         shift, and go to state 29


State 16

    0 $accept: program $end •

    $default  accept


State 17

    3 function_declaration_list: function_declaration_list function_declaration •

    $default  reduce using rule 3 (function_declaration_list)


State 18

   27 var_unit: IDENTIFIER •
   29         | IDENTIFIER • dims
   34 function_head: IDENTIFIER •

    '['  shift, and go to state 30

    '('       reduce using rule 34 (function_head)
    $default  reduce using rule 27 (var_unit)

    dims  go to state 31


State 19

   28 var_unit: '*' • IDENTIFIER

    IDENTIFIER  shift, and go to state 32


State 20

   24 declaration: type_spec ';' •

    $default  reduce using rule 24 (declaration)


State 21

   20 declaration: type_spec variable_list • ';'
   26 variable_list: variable_list • ',' var_unit

    ';'  shift, and go to state 33
    ','  shift, and go to state 34


State 22

   25 variable_list: var_unit •

    $default  reduce using rule 25 (variable_list)


State 23

   32 function: type_spec function_head • '(' parameter_list ')' block

    '('  shift, and go to state 35


State 24

    8 type_spec: STRUCT IDENTIFIER '{' • field_decl_list '}'

    INT     shift, and go to state 2
    CHAR    shift, and go to state 3
    STRUCT  shift, and go to state 4
    TYPEID  shift, and go to state 6

    type_spec        go to state 25
    field_decl_list  go to state 36
    field_decl       go to state 27


State 25

   14 field_decl: type_spec • field_var_list ';'

    IDENTIFIER  shift, and go to state 37
    '*'         shift, and go to state 38

    field_var_list  go to state 39
    field_var_unit  go to state 40


State 26

    9 type_spec: STRUCT '{' field_decl_list • '}'
   13 field_decl_list: field_decl_list • field_decl

    INT     shift, and go to state 2
    CHAR    shift, and go to state 3
    STRUCT  shift, and go to state 4
    TYPEID  shift, and go to state 6
    '}'     shift, and go to state 41

    type_spec   go to state 25
    field_decl  go to state 42


State 27

   12 field_decl_list: field_decl •

    $default  reduce using rule 12 (field_decl_list)


State 28

   21 declaration: TYPEDEF type_spec IDENTIFIER • ';'
   23            | TYPEDEF type_spec IDENTIFIER • '[' INTEGER ']' ';'

    '['  shift, and go to state 43
    ';'  shift, and go to state 44


State 29

   22 declaration: TYPEDEF type_spec '*' • IDENTIFIER ';'

    IDENTIFIER  shift, and go to state 45


State 30

   30 dims: '[' • INTEGER ']' dims
   31     | '[' • INTEGER ']'

    INTEGER  shift, and go to state 46


State 31

   29 var_unit: IDENTIFIER dims •

    $default  reduce using rule 29 (var_unit)


State 32

   28 var_unit: '*' IDENTIFIER •

    $default  reduce using rule 28 (var_unit)


State 33

   20 declaration: type_spec variable_list ';' •

    $default  reduce using rule 20 (declaration)


State 34

   26 variable_list: variable_list ',' • var_unit

    IDENTIFIER  shift, and go to state 47
    '*'         shift, and go to state 19

    var_unit  go to state 48


State 35

   32 function: type_spec function_head '(' • parameter_list ')' block

    INT     shift, and go to state 2
    CHAR    shift, and go to state 3
    STRUCT  shift, and go to state 4
    TYPEID  shift, and go to state 6

    $default  reduce using rule 35 (parameter_list)

    type_spec       go to state 49
    parameter_list  go to state 50
    param_seq       go to state 51


State 36

    8 type_spec: STRUCT IDENTIFIER '{' field_decl_list • '}'
   13 field_decl_list: field_decl_list • field_decl

    INT     shift, and go to state 2
    CHAR    shift, and go to state 3
    STRUCT  shift, and go to state 4
    TYPEID  shift, and go to state 6
    '}'     shift, and go to state 52

    type_spec   go to state 25
    field_decl  go to state 42


State 37

   17 field_var_unit: IDENTIFIER •
   19               | IDENTIFIER • dims

    '['  shift, and go to state 30

    $default  reduce using rule 17 (field_var_unit)

    dims  go to state 53


State 38

   18 field_var_unit: '*' • IDENTIFIER

    IDENTIFIER  shift, and go to state 54


State 39

   14 field_decl: type_spec field_var_list • ';'
   16 field_var_list: field_var_list • ',' field_var_unit

    ';'  shift, and go to state 55
    ','  shift, and go to state 56


State 40

   15 field_var_list: field_var_unit •

    $default  reduce using rule 15 (field_var_list)


State 41

    9 type_spec: STRUCT '{' field_decl_list '}' •

    $default  reduce using rule 9 (type_spec)


State 42

   13 field_decl_list: field_decl_list field_decl •

    $default  reduce using rule 13 (field_decl_list)


State 43

   23 declaration: TYPEDEF type_spec IDENTIFIER '[' • INTEGER ']' ';'

    INTEGER  shift, and go to state 57


State 44

   21 declaration: TYPEDEF type_spec IDENTIFIER ';' •

    $default  reduce using rule 21 (declaration)


State 45

   22 declaration: TYPEDEF type_spec '*' IDENTIFIER • ';'

    ';'  shift, and go to state 58


State 46

   30 dims: '[' INTEGER • ']' dims
   31     | '[' INTEGER • ']'

    ']'  shift, and go to state 59


State 47

   27 var_unit: IDENTIFIER •
   29         | IDENTIFIER • dims

    '['  shift, and go to state 30

    $default  reduce using rule 27 (var_unit)

    dims  go to state 31


State 48

   26 variable_list: variable_list ',' var_unit •

    $default  reduce using rule 26 (variable_list)


State 49

   37 param_seq: type_spec • IDENTIFIER
   38          | type_spec • '*' IDENTIFIER
   39          | type_spec • IDENTIFIER '[' ']'

    IDENTIFIER  shift, and go to state 60
    '*'         shift, and go to state 61


State 50

   32 function: type_spec function_head '(' parameter_list • ')' block

    ')'  shift, and go to state 62


State 51
